# gba-rust-apps

./: .gitignore  .gitmodules  Cargo.toml  linker.ld
.cargo/: config.toml
aux-display/: Cargo.toml
aux-display/src/: lib.rs  main.rs
draw/: Cargo.toml  Makefile.toml
draw/src/: main.rs
embedded-graphics-gba/: Cargo.toml  Makefile.toml
embedded-graphics-gba/src/: lib.rs
game-of-life/: Cargo.toml
game-of-life/src/: lib.rs  main.rs
gol4/: Cargo.toml  Makefile.toml
gol4/src/: lib.rs  main.rs
gol5/: Cargo.toml
gol5/src/: lib.rs  main.rs
keypad/: Cargo.toml  Makefile.toml
keypad/src/: main.rs
uart-echo/: Cargo.toml
uart-echo/src/: main.rs
