[package]
name = "draw"
version = "0.1.0"
authors = ["Michael Mogenson <michael.mogenson@gmail.com>"]
edition = "2018"

[dependencies]
embedded-graphics = "0.6.2"
embedded-graphics-gba = { path = "../embedded-graphics-gba" }
gba = { path = "../gba" }
panic-abort = "0.3.2"
tinytga = { version = "0.3.2", features = ["graphics"] }
